[FIX] N+1 문제 최적화 친구 추천 기능 작성