@@ -1,23 +1,24 @@
 package com.ssapick.server.domain.user.service;
 
+import java.util.ArrayList;
+import java.util.List;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.ssapick.server.core.exception.BaseException;
 import com.ssapick.server.core.exception.ErrorCode;
 import com.ssapick.server.domain.user.dto.ProfileData;
 import com.ssapick.server.domain.user.entity.Follow;
-import com.ssapick.server.domain.user.entity.Profile;
 import com.ssapick.server.domain.user.entity.User;
+import com.ssapick.server.domain.user.entity.UserBan;
 import com.ssapick.server.domain.user.repository.FollowRepository;
+import com.ssapick.server.domain.user.repository.ProfileRepository;
 import com.ssapick.server.domain.user.repository.UserBanRepository;
 import com.ssapick.server.domain.user.repository.UserRepository;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -27,6 +28,8 @@ public class FollowService {
     private final FollowRepository followRepository;
     private final UserRepository userRepository;
     private final UserBanRepository userBanRepository;
+    private final ProfileRepository profileRepository;
+    // private final FollowQueryRepository followQueryRepository;
 
     public List<ProfileData.Search> findFollowUsers(User user) {
         return userRepository.findFollowUserByUserId(user.getId()).stream().map(User::getProfile).map(ProfileData.Search::fromEntity).toList();
@@ -62,35 +65,21 @@ public class FollowService {
      * @return List<ProfileData.Search>
      */
     public List<ProfileData.Search> recommendFollow(User user) {
-        // 현재 사용자의 친구 목록을 가져온다.
-        List<Profile> friends = followRepository.findByFollowUser(user).stream()
-            .map(follow -> follow.getFollowingUser().getProfile())
-            .toList();
-
-        // 현재 사용자가 벤한 친구 목록을 가져온다.
-        List<Profile> bannedProfiles = userBanRepository.findBanUsersByFromUser(user).stream()
+        // 불변 리스트를 방지하기 위해 ArrayList로 변환합니다.
+        List<ProfileData.Search> recommends = new ArrayList<>(followRepository.findRecommendUserIds(user)
+            .stream()
+            .limit(15)
             .map(User::getProfile)
-            .toList();
-
-
-        Map<Profile, Integer> recommendationMap = new HashMap<>();
-
-        // 친구의 친구를 순회하며 추천 후보를 찾는다. (차단한 유저 제외)
-        friends.stream()
-            .flatMap(friend -> followRepository.findByFollowUser(friend.getUser()).stream())
-            .map(follow -> follow.getFollowingUser().getProfile())
-            .filter(profile -> !friends.contains(profile) && !profile.equals(user.getProfile()) && !bannedProfiles.contains(profile))
-            .forEach(profile -> recommendationMap.merge(profile, 1, Integer::sum));
-
-        // 추천 후보를 중복 횟수에 따라 정렬
-        List<Profile> recommendedProfiles = recommendationMap.entrySet().stream()
-            .sorted(Map.Entry.<Profile, Integer>comparingByValue().reversed())
-            .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
-
-        // ProfileData.Search로 변환
-        return recommendedProfiles.stream()
             .map(ProfileData.Search::fromEntity)
-            .collect(Collectors.toList());
+            .toList()
+        );
+
+        // 차단된 사용자를 목록에서 제거합니다.
+        List<Long> bannedUserIds = userBanRepository.findBanUsersByFromUser(user).stream()
+            .map(User::getId).toList();
+
+        recommends.removeIf(recommend -> bannedUserIds.contains(recommend.getUserId()));
+
+        return recommends;
     }
 }
